# SUPER_change

./: .gitignore
mars_uav_sim/perfect_drone_sim/launch/: gazebo_click_demo.launch.py
mars_uav_sim/perfect_drone_sim/ros/: ros2.CMakeLists.txt  ros2.package.xml
mars_uav_sim/perfect_drone_sim/src/: ros2_gazebo_position_plugin.cpp  ros2_world_cloud_transformer_node.cpp
mars_uav_sim/perfect_drone_sim/urdf/: super_gazebo_quadrotor.urdf.xacro
mars_uav_sim/perfect_drone_sim/worlds/: super_light.world
sentry_control/: CMakeLists.txt  package.xml
sentry_control/include/sentry_control/: gimbal_controller.h
sentry_control/src/: control_node.cpp  gimbal_controller.cpp
sentry_decision/: CMakeLists.txt  package.xml
sentry_decision/include/sentry_decision/: sentry_fsm.h  target_decider.h
sentry_decision/src/: decision_node.cpp  sentry_fsm.cpp  target_decider.cpp
sentry_msgs/: CMakeLists.txt  package.xml
sentry_msgs/msg/: FireCommand.msg  GimbalCommand.msg  GimbalState.msg  SentryStatus.msg  TargetInfo.msg
sentry_vision/: CMakeLists.txt  package.xml
sentry_vision/include/sentry_vision/: target_detector.h
sentry_vision/src/: target_detector.cpp  vision_node.cpp
super_planner/: CMakeLists.txt  README.md
super_planner/config/: click_smooth_ros1.yaml  click_smooth_ros2.yaml  ground_car_ros1.yaml  static_dense.yaml
super_planner/include/fsm/: config.hpp
super_planner/include/ros_interface/ros1/: fsm_ros1.hpp  ros1_adapter.hpp
super_planner/include/ros_interface/ros2/: fsm_ros2.hpp  ros2_adapter.hpp
super_planner/include/traj_opt/: config.hpp
super_planner/ros/: ros2.CMakeLists.txt  ros2.package.xml
super_planner/src/super_core/: fsm.cpp  super_planner.cpp
super_planner/src/traj_opt/: backup_traj_optimizer_s4.cpp
super_planner/src/utils/: geometry_utils.cpp  polytope.cpp
